# src/main/java/com/cpsc/backend/entity/Institution.java
@@ -1,0 +1,62 @@
+package com.cpsc.backend.entity;
+
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbBean;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbPartitionKey;
+import software.amazon.awssdk.enhanced.dynamodb.mapper.annotations.DynamoDbSortKey;
+
+import java.time.Instant;
+
+@DynamoDbBean
+public class Institution {
+
+    private String userId;
+    private String institutionId;
+    private String institutionName;
+    private Double startingBalance;
+    private Instant createdAt;
+
+    public Institution() {
+    }
+
+    @DynamoDbPartitionKey
+    public String getUserId() {
+        return userId;
+    }
+
+    public void setUserId(String userId) {
+        this.userId = userId;
+    }
+
+    @DynamoDbSortKey
+    public String getInstitutionId() {
+        return institutionId;
+    }
+
+    public void setInstitutionId(String institutionId) {
+        this.institutionId = institutionId;
+    }
+
+    public String getInstitutionName() {
+        return institutionName;
+    }
+
+    public void setInstitutionName(String institutionName) {
+        this.institutionName = institutionName;
+    }
+
+    public Double getStartingBalance() {
+        return startingBalance;
+    }
+
+    public void setStartingBalance(Double startingBalance) {
+        this.startingBalance = startingBalance;
+    }
+
+    public Instant getCreatedAt() {
+        return createdAt;
+    }
+
+    public void setCreatedAt(Instant createdAt) {
+        this.createdAt = createdAt;
+    }
+}
